syntax = "proto3";

package domain;

option go_package = "pkg/pb;pb";

import "base.proto";

message ServiceCost {
  Entity Entity = 1;
  string id_service = 2;
  double value = 3;
}

message ServiceCostRequest {
  ServiceCost payload = 1;
}

message ServiceCostResponse {
  ServiceCost response = 1;
}

message ServiceCostListResponse {
  repeated ServiceCost response = 1;
}

service ServiceCostService {
  rpc Create(ServiceCostRequest) returns (ServiceCostResponse);
  rpc Update(ServiceCostRequest) returns (ServiceCostResponse);
  rpc FindAll(ServiceCostRequest) returns (ServiceCostListResponse);
  rpc FindOne(ServiceCostRequest) returns (ServiceCostResponse);
  rpc Enabled(Entity) returns (ServiceCostResponse);
  rpc Disable(Entity) returns (ServiceCostResponse);
}
